# SmartCareerFitAssistant

./: README.md  app.py  main.py  pyproject.toml
backend/: .gitignore  api.py  pyproject.toml
backend/src/: config.py
backend/src/agents/: __init__.py  analyzer.py  extractor.py  generator.py  keyword_optimizer.py  utils.py
backend/src/database/: database.py  repository.py
backend/src/models/: analysis.py  job.py  resume.py  structured_resume.py
backend/src/services/: auth.py  pdf_parser.py  pipeline.py  resume_assist.py
backend/src/utils/: pdf.py
data/: career_assistant.db
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  Hero.tsx  InputPanel.tsx  LLMSettings.tsx  Sidebar.tsx
src/: config.py
src/agents/: __init__.py  analyzer.py  base.py  context.py  extractor.py  generator.py  keyword_optimizer.py  skill_matching.py  token_budget.py  utils.py
src/database/: __init__.py  database.py  repository.py
src/db/: __init__.py  database.py  repository.py
src/models/: __init__.py  analysis.py  job.py  resume.py
src/services/: __init__.py  pipeline.py  rescore.py
src/styles/: __init__.py  theme.py
src/utils/: pdf.py  resume_parser.py  resume_sections.py  skill_validation.py
tests/: test_database.py  test_models.py  test_resume_parser.py  test_resume_sections.py  test_skill_validation.py
ui/: __init__.py  callbacks.py  components.py  input_panel.py  results.py  resume_handlers.py  sidebar.py  skill_survey.py  styles.py
(+7 files in other folders)
