[project]
name = "smart-career-fit-assistant"
version = "0.1.0"
description = "AI-powered career assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.9",
    "pydantic-ai>=1.68.0",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
