[project]
name = "smart-career-fit-assistant"
version = "0.1.0"
description = "AI-powered career assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pdfplumber>=0.11.9",
    "anthropic>=0.40.0",
    "pydantic-ai[anthropic]>=1.68.0",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.4.10",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.32.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
